--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "deploy": "cd .. && git subtree push --prefix server heroku master"
   },
   "repository": {
     "type": "git",
