--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "bash dev.sh",
     "start": "node app.js",
     "deploy": "cd .. && git subtree push --prefix server heroku master"
   },
@@ -20,9 +20,15 @@
   "homepage": "https://github.com/salockhart/CSCI-4176-Project---Team-2#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
-    "express": "^4.14.1"
+    "cloudinary": "^1.7.1",
+    "connect-busboy": "0.0.2",
+    "express": "^4.14.1",
+    "haversine": "^1.0.2",
+    "mongodb": "^2.2.24",
+    "request": "^2.79.0"
   },
   "devDependencies": {
+    "eslint": "^3.16.1",
     "nodemon": "^1.11.0"
   }
 }
