create stub new bathroom and bathroom preview activities, and linked them to the map view plus-button and debug marker

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -1,10 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="ca.team2.crapmap">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="ca.team2.crapmap">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
-        android:supportsRtl="true" android:theme="@style/AppTheme">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+
         <!--
                  The API key for Google Maps-based APIs is defined as a string resource.
                  (See the file "res/values/google_maps_api.xml").
@@ -12,15 +18,24 @@ package="ca.team2.crapmap">
                  You need a different API key for each encryption key, including the release key that is used to
                  sign the APK for publishing.
                  You can define the keys for the debug and release targets in src/debug/ and src/release/.
-            -->
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key" />
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
-        <activity android:name=".MapsActivity" android:label="CrapMap">
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".NewBathroomActivity"
+            android:label="@string/new_bathroom_title"></activity>
+        <activity android:name=".PreviewBathroomActivity"></activity>
     </application>
+
 </manifest>
