--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -34,8 +34,16 @@
         </activity>
         <activity
             android:name=".NewBathroomActivity"
-            android:label="@string/new_bathroom_title"></activity>
-        <activity android:name=".PreviewBathroomActivity"></activity>
+            android:label="@string/new_bathroom_title"
+            android:theme="@style/AppTheme"
+            android:parentActivityName="ca.team2.crapmap.MapsActivity">
+
+        </activity>
+        <activity
+            android:name=".PreviewBathroomActivity"
+            android:parentActivityName="ca.team2.crapmap.MapsActivity">
+
+        </activity>
     </application>
 
 </manifest>
