--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -27,7 +27,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.google.android.gms:play-services:9.0.0'
+    compile 'com.google.android.gms:play-services-maps:9.4.0'
+    compile 'com.google.android.gms:play-services-location:9.4.0'
     compile 'com.android.support:design:23.0.0'
     testCompile 'junit:junit:4.12'
 }
