--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/salockhart/CSCI-4176-Project---Team-2#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.16.1",
     "cloudinary": "^1.7.1",
     "connect-busboy": "0.0.2",
     "express": "^4.14.1",
     "haversine": "^1.0.2",
+    "jsonwebtoken": "^7.3.0",
     "mongodb": "^2.2.24",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "request": "^2.79.0"
   },
   "devDependencies": {
