--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -53,6 +53,11 @@
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
             android:parentActivityName=".SettingsActivity"/>
+        <activity
+            android:name=".NewCommentActivity"
+            android:label="@string/new_comment_title"
+            android:parentActivityName=".PreviewBathroomActivity"
+            android:theme="@style/AppTheme" />
 
     </application>
 
