--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".controller.MapsActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,30 +33,30 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NewBathroomActivity"
+            android:name=".controller.NewBathroomActivity"
             android:label="@string/new_bathroom_title"
-            android:parentActivityName=".MapsActivity"
+            android:parentActivityName=".controller.MapsActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".PreviewBathroomActivity"
-            android:parentActivityName=".MapsActivity" />
+            android:name=".controller.PreviewBathroomActivity"
+            android:parentActivityName=".controller.MapsActivity" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".controller.SettingsActivity"
             android:label="Settings"
-            android:parentActivityName=".MapsActivity">
+            android:parentActivityName=".controller.MapsActivity">
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".controller.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".SettingsActivity"/>
+            android:parentActivityName=".controller.SettingsActivity"/>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".controller.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:parentActivityName=".SettingsActivity"/>
+            android:parentActivityName=".controller.SettingsActivity"/>
         <activity
-            android:name=".NewCommentActivity"
+            android:name=".controller.NewCommentActivity"
             android:label="@string/new_comment_title"
-            android:parentActivityName=".PreviewBathroomActivity"
+            android:parentActivityName=".controller.PreviewBathroomActivity"
             android:theme="@style/AppTheme" />
 
     </application>
